--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,28 @@ on:
     types: [wp-update]
 
 jobs:
-  say-hello:
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - run: echo "WordPressからWebhook受信しました。"
+      - name: リポジトリをチェックアウト
+        uses: actions/checkout@v3
+
+      - name: Node.js をセットアップ
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22.12.0' 
+
+      - name: パッケージインストール
+        run: npm ci
+
+      - name: Astroビルド
+        run: npm run build
+
+      - name: Cloudflare Pages にデプロイ
+        uses: cloudflare/pages-action@v1
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          projectName: astro-wp-integration
+          directory: ./dist
